Set offsetParent via list position relative and update ensure visible

--- a/MusicPad/src/com/example/afs/musicpad/webapp/client/MusicPad.css
+++ b/MusicPad/src/com/example/afs/musicpad/webapp/client/MusicPad.css
@@ -231,6 +231,7 @@ input[type=range]:focus::-webkit-slider-runnable-track {
     line-height: 120%;
     border: 1px solid white;
     background-color: black;
+    position: relative;
 }
 
 .row {
